@@ -14,18 +14,19 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.5.6</version>
+		<version>3.5.7</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
 	<properties>
-		<java.version>21</java.version>
+		<java.version>25</java.version>
 		<token-validation.version>5.0.30</token-validation.version>
 		<postgresql.version>42.7.8</postgresql.version>
 		<shedlock.version>6.10.0</shedlock.version>
 		<flyway-database-postgresql.version>11.7.2</flyway-database-postgresql.version>
 		<springdoc.version>2.8.13</springdoc.version>
 		<logstash.version>8.1</logstash.version>
+        <commons-lang3.version>3.18.0</commons-lang3.version>
 	</properties>
 
 	<dependencies>
@@ -141,6 +142,17 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<version>${project.parent.version}</version>
 			</plugin>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                        <arg>-proc:full</arg>
+                    </compilerArgs>
+                    <parameters>true</parameters>
+                    <release>${java.version}</release>
+                </configuration>
+            </plugin>
 		</plugins>
 	</build>
 
